--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@noble/curves": "^1.7.0",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
     "@radix-ui/react-icons": "^1.3.1",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-query": "^5.59.20",
     "@tanstack/react-query-devtools": "^5.59.20",
     "@wagmi/core": "^2.14.4",
+    "bigint-crypto-utils": "^3.3.0",
     "bignumber.js": "^9.1.2",
     "class-variance-authority": "^0.7.0",
     "connectkit": "^1.8.2",
